SERVER-11194 ignore non-numeric expiresAfterSeconds on TTL indexes